--- a/kotlinjpa/src/main/resources/application.properties
+++ b/kotlinjpa/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.username=root
 spring.datasource.password=zw123456
 
 
-mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
-mybatis.type-aliases-package=com.zw.kotlinjpa
+#mybatis.mapper-locations=classpath:/mapper/*Mapper.xml
+#mybatis.type-aliases-package=com.zw.kotlinjpa
