--- a/learning/src/main/resources/application.properties
+++ b/learning/src/main/resources/application.properties
@@ -9,3 +9,8 @@ mybatis.type-aliases-package=com.zw.learning
 
 
 server.port = 8088
+
+
+#配置自动建表：updata:没有表新建，有表更新操作,控制台显示建表语句
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
