--- a/learning/src/main/resources/application.properties
+++ b/learning/src/main/resources/application.properties
@@ -14,3 +14,31 @@ server.port = 8088
 #配置自动建表：updata:没有表新建，有表更新操作,控制台显示建表语句
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+#spring:
+#  thymeleaf:
+#  cache: true
+#  check-template-location: true
+#  content-type: text/html
+#  enabled: true
+#  encoding: utf-8
+#  mode: HTML5
+#  prefix: classpath:/templates/
+#  suffix: .html
+#  excluded-view-names:
+#  template-resolver-order:
+#  datasource:
+#    driver-class-name: com.mysql.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/restful?useUnicode=true&characterEncoding=UTF-8&useSSL=false
+#    username: root
+#    password: root
+#    initialize: true
+#  init-db: true
+#  jpa:
+#    database: mysql
+#    show-sql: true
+#    hibernate:
+#        ddl-auto: update
+#        naming:
+#           strategy: org.hibernate.cfg.ImprovedNamingStrategy
