--- a/SpringCloud-Learning/pom.xml
+++ b/SpringCloud-Learning/pom.xml
@@ -30,6 +30,10 @@
         <module>didispace-multiservice</module>
         <module>didispace-httpservice</module>
         <module>didispace-httpclient</module>
+        <module>didispace-admin</module>
+        <module>didispace-dingding</module>
+        <module>didispace-excel</module>
+        <module>didispace-pdf</module>
     </modules>
 
 </project>
