--- a/SpringCloud-Learning/pom.xml
+++ b/SpringCloud-Learning/pom.xml
@@ -34,6 +34,9 @@
         <module>didispace-dingding</module>
         <module>didispace-excel</module>
         <module>didispace-pdf</module>
+        <module>didispace-eureka-service</module>
+        <module>didispace-eureka-client</module>
+        <module>didispace-eureka-customer</module>
     </modules>
 
 </project>
