--- a/myblog/pom.xml
+++ b/myblog/pom.xml
@@ -117,6 +117,13 @@
             <version>20160810</version>
         </dependency>
 
+        <!--  网络请求 -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+
         <!--阿里云短信验证码-->
         <dependency>
             <groupId>com.aliyun</groupId>
