--- a/myblog/pom.xml
+++ b/myblog/pom.xml
@@ -162,6 +162,18 @@
             <version>2.2.2</version>
         </dependency>
 
+        <!--excel-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.9</version>
+        </dependency>
+
     </dependencies>
 
 
