--- a/myblog/pom.xml
+++ b/myblog/pom.xml
@@ -194,6 +194,12 @@
             <version>3.9</version>
         </dependency>
 
+        <!--websocket-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+
     </dependencies>
 
 
