--- a/myblog/pom.xml
+++ b/myblog/pom.xml
@@ -108,16 +108,12 @@
         <!--json-->
         <!--<dependency>-->
             <!--<groupId>net.sf.json-lib</groupId>-->
-            <!--<artifactId>json-lib-ext-spring</artifactId>-->
-            <!--<version>1.0.2</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.json</groupId>-->
-            <!--<artifactId>json</artifactId>-->
-            <!--<version>20160810</version>-->
+            <!--<artifactId>json-lib</artifactId>-->
+            <!--<version>2.4</version>-->
+            <!--<classifier>jdk15</classifier>-->
         <!--</dependency>-->
 
-
+        <!-- alibaba data source 相关jar包-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -136,6 +132,12 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.2</version>
         </dependency>
+
+        <!-- aop依赖 -->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-aop</artifactId>-->
+        <!--</dependency>-->
 
         <!--阿里云短信验证码-->
         <dependency>
@@ -216,6 +218,12 @@
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
             <version>1.4.9</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>2.0.0</version>
         </dependency>
 
     </dependencies>
