--- a/myblog/pom.xml
+++ b/myblog/pom.xml
@@ -226,6 +226,13 @@
             <version>2.0.0</version>
         </dependency>
 
+        <!-- 爬虫使用 -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.3</version>
+        </dependency>
+
     </dependencies>
 
 
